# licensesnip

./: .gitignore  .gitpod.yml  .licensesnip  .licensesnipignore  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  a.vue  licensesnip.config.jsonc  package-lock.json  package.json  replit.nix
.github/workflows/: rust.yml  rustlinux  rustwindows.yml
npm/: getBinary.js  install.js  run.js  uninstall.js
src/: base-config.jsonc  config.rs  default-config.json  license.rs  main.rs  walk.rs
src/commands/: check.rs  config.rs  default.rs  mod.rs  remove.rs
src/frontend/: mod.rs
test/ignored/: a.rs
test/ignored2/: b.rs
