[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exitcode = "1.1.2"
colored = "2"
mktemp = "0.4.1"