[package]
name = "licensesnip"
description = "A tool to add license headers to your source code."
license = "MIT"
version = "1.5.0"
authors = ["notken12"]
edition = "2021"
repository = "https://github.com/notken12/licensesnip"
keywords = ["license", "header"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exitcode = "1.1.2"
colored = "2"
mktemp = "0.4.1"
directories = "4.0"
clap = { version = "3.1.6", features = ["derive"] }
chrono = "0.4.19"
